# galaxy-chop

./: .flake8  .gitignore  CMakeCache_OLD.txt  CMakeLists.txt  MANIFEST.in  README.md  build.ninja  cmake_install.cmake  meson.build  pyproject.toml  requirements_dev.txt  setup.py  tox.ini
.github/workflows/: CI.yml  publish.yml  tests.yml
docs/: requirements.txt  tutorial.ipynb
docs/source/: conf.py  index.rst
docs/source/api/: index.rst  pipeline.rst
docs/source/api/core/: methods.rst
docs/source/api/preproc/: _base.rst  index.rst
docs/source/api/preproc/potential_energy/: grispy_calculation.rst  index.rst  potential_energy.inc
docs/source/api/preproc/potential_energy/fortran/: index.rst
docs/source/api/utils/: bunch.rst  index.rst  unames.rst
docs/source/tutorials/: decomposers.ipynb  galaxies.ipynb  index.rst  new-pre-proccesing_and_decomposition.ipynb  pipeline.ipynb  pre-proccesing_and_decomposition.ipynb  quickstart.ipynb
draft/: 8Dic_todo.txt  Galaxychop_tutorial.ipynb  add_to_potential_c.txt  anotations_try.text  consulta_Juan_03-10.txt  error_sms_last_build.txt  meet_bruno  pre-proccesing_and_decomposition_old.ipynb  to_do_25-10.txt  try_glxchop.ipynb  tutorial_old.ipynb
galaxychop/: __init__.py  constants.py  io.py  pipeline.py  to_do_Clase_Juan.txt
galaxychop/core/: __init__.py  anotations_try.text  data.py  methods.py  plot.py  sdynamics.py
galaxychop/models/: __init__.py  _base.py  gaussian_mixture.py  histogram.py  kmeans.py  threshold.py
galaxychop/preproc/: __init__.py  _base.py  grispy_potential.py  pcenter.py  potential_energy.py  salign.py  smr_crop.py
galaxychop/preproc/c/: utils.py
galaxychop/preproc/fortran/: __init__.py
galaxychop/preproc/potential_energy/: __init__.py  grispy_calculation.py  grispy_potential.py
galaxychop/preproc/potential_energy/c/: potential.c  potential_helper.py  utils.py
galaxychop/preproc/potential_energy/c/cython_try/: cython_helper.txt  potential.pyx  potential_cwrapper.pyx  setup_potential.py
galaxychop/preproc/potential_energy/c/wrapPY_c/: Try_wrap_Octree.ipynb  potential.c  potential_wrapped.c  wrap_setup.py
galaxychop/preproc/potential_energy/fortran/: potential.f90
galaxychop/utils/: __init__.py  bunch.py  decorators.py  unames.py
tests/: test_pipeline.py
tests/core/: test_data.py  test_methods.py  test_sdynamics.py
tests/models/: test_base.py  test_base_model.py  test_gaussian_mixture.py  test_histogram.py  test_kmeans.py  test_threshold.py
tests/preproc/: test_base.py  test_base_preproc.py  test_pcenter.py  test_preproc.py  test_salign.py  test_smr_crop.py
tests/preproc/potential_energy/: test_grispy_calculation.py  test_potential_energy.py
tests/preproc/potential_energy/c/: test_potential_helper.py  test_utils.py
tests/preproc/potential_energy/c/wrapPY_c/: test_wrap_setup.py
tests/utils/: test_bunch.py  test_unames.py
